# HNGD-Model

./: .numba_config.yaml  HNGD_model.py  LICENSE  README.md  pyproject.toml
examples/Animation example/: animation_example.py
examples/Cooling rate experiments/: cooling_rate_animation.py  cooling_rate_experiments.py
examples/Cooling rate experiments/Outputs/: cooling_rate_0.01_node_1_output_file.txt  cooling_rate_0.1_node_1_output_file.txt  cooling_rate_0.2_node_1_output_file.txt  cooling_rate_0.5_node_1_output_file.txt  cooling_rate_0.8_node_1_output_file.txt  cooling_rate_1.0_node_1_output_file.txt  cooling_rate_10.0_node_1_output_file.txt  cooling_rate_100.0_node_1_output_file.txt  cooling_rate_2.0_node_1_output_file.txt  cooling_rate_20.0_node_1_output_file.txt  cooling_rate_5.0_node_1_output_file.txt  cooling_rate_50.0_node_1_output_file.txt  cooling_rate_8.0_node_1_output_file.txt  cooling_rate_80.0_node_1_output_file.txt
examples/Debugging example/: debugger_example.py
examples/Kammenzind experiments/Asymmetric Experiments/: experimental_data.py  kammenzind_asymmetric_experiment_animation.py  (+1 more)
examples/Lacroix experiments/: lacroix_experiment.py  lacroix_experiment_animation.py
examples/Liner experiments/: animation_liner.py  example_liner.py
examples/Model verification/: model_verification.py
examples/Sawatzky experiments/: sawatzky_experiment_animation.py  sawatzky_experiments.py
examples/Simulation example/: example_use.py
examples/TTT experiments/: TTT_experiment.py
hngd/: animation_utils.py  default.py  hngd.py  io_utils.py  run.py
(+132 files in other folders)
